Debugger: Fix TRACE_LOCALS statement.

- Correct a TRACE_LOCALS statement in ValueWriter.cpp and update it to
  match the current definition of ValuePieceLocation.

Fixes #12411.

Signed-off-by: Rene Gollent <rene@gollent.com>